First commited as before_24753_rev3