@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2009 IBM Corporation and others.
+ * Copyright (c) 2005, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -9,8 +9,12 @@
  *     IBM Corporation - initial API and implementation
  *     Brad Reynolds - bugs 116920, 147515
  *     Matthew Hall - bug 274081
+ *     Stefan Xenos <sxenos@gmail.com> - Bug 335792
+ *     Simon Scholz <simon.scholz@vogella.com> - Bug 488145
  *******************************************************************************/
 package org.eclipse.core.databinding.observable.value;
+
+import java.util.function.Supplier;
 
 import org.eclipse.core.databinding.observable.ChangeEvent;
 import org.eclipse.core.databinding.observable.IChangeListener;
@@ -35,13 +39,13 @@ import org.eclipse.core.databinding.observable.list.IObservableList;
  * Example: compute the sum of all elements in an {@link IObservableList} &lt;
  * {@link Integer} &gt;.
  * </p>
- * 
+ *
  * <pre>
  * final IObservableList addends = WritableValue.withValueType(Integer.TYPE);
- * addends.add(new Integer(0));
- * addends.add(new Integer(1));
- * addends.add(new Integer(2));
- * 
+ * addends.add(Integer.valueOf(0));
+ * addends.add(Integer.valueOf(1));
+ * addends.add(Integer.valueOf(2));
+ *
  * IObservableValue sum = new ComputedValue() {
  * 	protected Object calculate() {
  * 		int sum = 0;
@@ -52,22 +56,25 @@ import org.eclipse.core.databinding.observable.list.IObservableList;
  * 		return sum;
  * 	}
  * };
- * 
+ *
  * System.out.println(sum.getValue()); // =&gt; 3
- * 
- * addends.add(new Integer(10));
+ *
+ * addends.add(Integer.valueOf(10));
  * System.out.println(sum.getValue()); // =&gt; 13
  * </pre>
- * 
+ *
+ * @param <T>
+ *            the type of value being observed
+ *
  * @since 1.0
  */
-public abstract class ComputedValue extends AbstractObservableValue {
+public abstract class ComputedValue<T> extends AbstractObservableValue<T> {
 
 	private boolean dirty = true;
 
 	private boolean stale = false;
 
-	private Object cachedValue = null;
+	private T cachedValue = null;
 
 	/**
 	 * Array of observables this computed value depends on. This field has a
@@ -76,7 +83,35 @@ public abstract class ComputedValue extends AbstractObservableValue {
 	private IObservable[] dependencies = null;
 
 	/**
-	 * 
+	 * Factory method to create {@link ComputedValue} objects in an easy manner.
+	 * <br/>
+	 * <br/>
+	 * Example observing the size of an {@link IObservableList}:
+	 *
+	 * <pre>
+	 * IObservableValue&lt;Integer&gt; listSizeObservable = ComputedValue.create(() -> observableList.size());
+	 * </pre>
+	 *
+	 * @param supplier
+	 *            {@link Supplier}, whose {@link Supplier#get()} method is a
+	 *            TrackedGetter. See
+	 *            {@link ObservableTracker#getterCalled(IObservable)} for
+	 *            details.
+	 * @return {@link ComputedValue} whose value is computed using the given
+	 *         {@link Supplier}.
+	 * @since 1.6
+	 */
+	public static <T> IObservableValue<T> create(Supplier<T> supplier) {
+		return new ComputedValue<T>() {
+			@Override
+			protected T calculate() {
+				return supplier.get();
+			}
+		};
+	}
+
+	/**
+	 *
 	 */
 	public ComputedValue() {
 		this(Realm.getDefault(), null);
@@ -92,7 +127,7 @@ public abstract class ComputedValue extends AbstractObservableValue {
 
 	/**
 	 * @param realm
-	 * 
+	 *
 	 */
 	public ComputedValue(Realm realm) {
 		this(realm, null);
@@ -112,28 +147,30 @@ public abstract class ComputedValue extends AbstractObservableValue {
 	 * public API. Each interface could have been implemented using a separate
 	 * anonymous class, but we combine them here to reduce the memory overhead
 	 * and number of classes.
-	 * 
+	 *
 	 * <p>
 	 * The Runnable calls computeValue and stores the result in cachedValue.
 	 * </p>
-	 * 
+	 *
 	 * <p>
 	 * The IChangeListener stores each observable in the dependencies list. This
 	 * is registered as the listener when calling ObservableTracker, to detect
 	 * every observable that is used by computeValue.
 	 * </p>
-	 * 
+	 *
 	 * <p>
 	 * The IChangeListener is attached to every dependency.
 	 * </p>
-	 * 
+	 *
 	 */
 	private class PrivateInterface implements Runnable, IChangeListener,
 			IStaleListener {
+		@Override
 		public void run() {
 			cachedValue = calculate();
 		}
 
+		@Override
 		public void handleStale(StaleEvent event) {
 			if (!dirty && !stale) {
 				stale = true;
@@ -141,6 +178,7 @@ public abstract class ComputedValue extends AbstractObservableValue {
 			}
 		}
 
+		@Override
 		public void handleChange(ChangeEvent event) {
 			makeDirty();
 		}
@@ -150,7 +188,8 @@ public abstract class ComputedValue extends AbstractObservableValue {
 
 	private Object valueType;
 
-	protected final Object doGetValue() {
+	@Override
+	protected final T doGetValue() {
 		if (dirty) {
 			// This line will do the following:
 			// - Run the calculate method
@@ -183,10 +222,10 @@ public abstract class ComputedValue extends AbstractObservableValue {
 	 * dependencies used to calculate the value must be {@link IObservable}, and
 	 * implementers must use one of the interface methods tagged TrackedGetter
 	 * for ComputedValue to recognize it as a dependency.
-	 * 
+	 *
 	 * @return the object's value
 	 */
-	protected abstract Object calculate();
+	protected abstract T calculate();
 
 	protected final void makeDirty() {
 		if (!dirty) {
@@ -195,16 +234,18 @@ public abstract class ComputedValue extends AbstractObservableValue {
 			stopListening();
 
 			// copy the old value
-			final Object oldValue = cachedValue;
+			final T oldValue = cachedValue;
 			// Fire the "dirty" event. This implementation recomputes the new
 			// value lazily.
-			fireValueChange(new ValueDiff() {
+			fireValueChange(new ValueDiff<T>() {
 
-				public Object getOldValue() {
+				@Override
+				public T getOldValue() {
 					return oldValue;
 				}
 
-				public Object getNewValue() {
+				@Override
+				public T getNewValue() {
 					return getValue();
 				}
 			});
@@ -212,7 +253,7 @@ public abstract class ComputedValue extends AbstractObservableValue {
 	}
 
 	/**
-	 * 
+	 *
 	 */
 	private void stopListening() {
 		// Stop listening for dependency changes.
@@ -227,12 +268,14 @@ public abstract class ComputedValue extends AbstractObservableValue {
 		}
 	}
 
+	@Override
 	public boolean isStale() {
 		// we need to recompute, otherwise staleness wouldn't mean anything
 		getValue();
 		return stale;
 	}
 
+	@Override
 	public Object getValueType() {
 		return valueType;
 	}
@@ -241,10 +284,12 @@ public abstract class ComputedValue extends AbstractObservableValue {
 	/**
 	 * @since 1.1
 	 */
+	@Override
 	protected boolean hasListeners() {
 		return super.hasListeners();
 	}
 
+	@Override
 	public synchronized void addChangeListener(IChangeListener listener) {
 		super.addChangeListener(listener);
 		// If somebody is listening, we need to make sure we attach our own
@@ -263,6 +308,7 @@ public abstract class ComputedValue extends AbstractObservableValue {
 	 */
 	private void computeValueForListeners() {
 		getRealm().exec(new Runnable() {
+			@Override
 			public void run() {
 				if (dependencies == null) {
 					// We are not currently listening.
@@ -277,14 +323,16 @@ public abstract class ComputedValue extends AbstractObservableValue {
 		});
 	}
 
+	@Override
 	public synchronized void addValueChangeListener(
-			IValueChangeListener listener) {
+			IValueChangeListener<? super T> listener) {
 		super.addValueChangeListener(listener);
 		// If somebody is listening, we need to make sure we attach our own
 		// listeners
 		computeValueForListeners();
 	}
 
+	@Override
 	public synchronized void dispose() {
 		super.dispose();
 		stopListening();
