@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2009 Matthew Hall and others.
+ * Copyright (c) 2008, 2015 Matthew Hall and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,6 +8,7 @@
  * Contributors:
  *     Matthew Hall - initial API and implementation (bug 194734)
  *     Matthew Hall - bug 262269
+ *     Stefan Xenos <sxenos@gmail.com> - Bug 335792
  ******************************************************************************/
 
 package org.eclipse.core.internal.databinding.property.value;
@@ -29,53 +30,58 @@ import org.eclipse.core.databinding.observable.list.IObservableList;
 import org.eclipse.core.databinding.observable.list.ListChangeEvent;
 import org.eclipse.core.databinding.observable.list.ListDiff;
 import org.eclipse.core.databinding.observable.list.ListDiffEntry;
-import org.eclipse.core.databinding.property.IProperty;
 import org.eclipse.core.databinding.property.IPropertyObservable;
 import org.eclipse.core.databinding.property.value.DelegatingValueProperty;
 
 /**
+ * @param <S>
+ *            type of the source object
+ * @param <T>
+ *            type of the value of the property
+ * @param <E>
+ *            type of the elements in the list
  * @since 1.2
  */
-public class ListDelegatingValueObservableList extends AbstractObservableList
-		implements IPropertyObservable {
-	private IObservableList masterList;
-	private DelegatingValueProperty detailProperty;
-	private DelegatingCache cache;
+public class ListDelegatingValueObservableList<S, T extends S, E> extends AbstractObservableList<E>
+		implements IPropertyObservable<DelegatingValueProperty<S, E>> {
+	private IObservableList<T> masterList;
+	private DelegatingValueProperty<S, E> detailProperty;
+	private DelegatingCache<S, T, E> cache;
 
-	private IListChangeListener masterListener = new IListChangeListener() {
-		public void handleListChange(ListChangeEvent event) {
+	private IListChangeListener<T> masterListener = new IListChangeListener<T>() {
+		@Override
+		public void handleListChange(ListChangeEvent<? extends T> event) {
 			if (isDisposed())
 				return;
 
 			cache.addAll(masterList);
 
 			// Need both obsolete and new elements to convert diff
-			ListDiff diff = convertDiff(event.diff);
+			ListDiff<E> diff = convertDiff(event.diff);
 
 			cache.retainAll(masterList);
 
 			fireListChange(diff);
 		}
 
-		private ListDiff convertDiff(ListDiff diff) {
+		private ListDiff<E> convertDiff(ListDiff<? extends T> diff) {
 			// Convert diff to detail value
-			ListDiffEntry[] masterEntries = diff.getDifferences();
-			ListDiffEntry[] detailEntries = new ListDiffEntry[masterEntries.length];
-			for (int i = 0; i < masterEntries.length; i++) {
-				ListDiffEntry masterDifference = masterEntries[i];
+			ListDiffEntry<? extends T>[] masterEntries = diff.getDifferences();
+			List<ListDiffEntry<E>> detailEntries = new ArrayList<>(masterEntries.length);
+			for (ListDiffEntry<? extends T> masterDifference : masterEntries) {
 				int index = masterDifference.getPosition();
 				boolean addition = masterDifference.isAddition();
-				Object masterElement = masterDifference.getElement();
-				Object detailValue = cache.get(masterElement);
+				T masterElement = masterDifference.getElement();
+				E detailValue = cache.get(masterElement);
 
-				detailEntries[i] = Diffs.createListDiffEntry(index, addition,
-						detailValue);
+				detailEntries.add(Diffs.createListDiffEntry(index, addition, detailValue));
 			}
 			return Diffs.createListDiff(detailEntries);
 		}
 	};
 
 	private IStaleListener staleListener = new IStaleListener() {
+		@Override
 		public void handleStale(StaleEvent staleEvent) {
 			fireStale();
 		}
@@ -85,14 +91,14 @@ public class ListDelegatingValueObservableList extends AbstractObservableList
 	 * @param masterList
 	 * @param valueProperty
 	 */
-	public ListDelegatingValueObservableList(IObservableList masterList,
-			DelegatingValueProperty valueProperty) {
+	public ListDelegatingValueObservableList(IObservableList<T> masterList,
+			DelegatingValueProperty<S, E> valueProperty) {
 		super(masterList.getRealm());
 		this.masterList = masterList;
 		this.detailProperty = valueProperty;
-		this.cache = new DelegatingCache(getRealm(), valueProperty) {
-			void handleValueChange(Object masterElement, Object oldValue,
-					Object newValue) {
+		this.cache = new DelegatingCache<S, T, E>(getRealm(), valueProperty) {
+			@Override
+			void handleValueChange(T masterElement, E oldValue, E newValue) {
 				fireListChange(indicesOf(masterElement), oldValue, newValue);
 			}
 		};
@@ -102,6 +108,7 @@ public class ListDelegatingValueObservableList extends AbstractObservableList
 		masterList.addStaleListener(staleListener);
 	}
 
+	@Override
 	protected int doGetSize() {
 		getterCalled();
 		return masterList.size();
@@ -111,77 +118,93 @@ public class ListDelegatingValueObservableList extends AbstractObservableList
 		ObservableTracker.getterCalled(this);
 	}
 
-	public Object get(int index) {
+	@Override
+	public E get(int index) {
 		getterCalled();
-		Object masterElement = masterList.get(index);
+		T masterElement = masterList.get(index);
 		return cache.get(masterElement);
 	}
 
+	@Override
 	public boolean add(Object o) {
 		throw new UnsupportedOperationException();
 	}
 
-	public boolean addAll(Collection c) {
+	@Override
+	public boolean addAll(Collection<? extends E> c) {
 		throw new UnsupportedOperationException();
 	}
 
-	public boolean addAll(int index, Collection c) {
+	@Override
+	public boolean addAll(int index, Collection<? extends E> c) {
 		throw new UnsupportedOperationException();
 	}
 
+	@Override
 	public boolean contains(Object o) {
 		getterCalled();
 		return cache.containsValue(o);
 	}
 
+	@Override
 	public boolean isEmpty() {
 		getterCalled();
 		return masterList.isEmpty();
 	}
 
+	@Override
 	public boolean isStale() {
 		getterCalled();
 		return masterList.isStale();
 	}
 
-	public Iterator iterator() {
+	@Override
+	public Iterator<E> iterator() {
 		getterCalled();
-		return new Iterator() {
-			Iterator it = masterList.iterator();
+		return new Iterator<E>() {
+			Iterator<T> it = masterList.iterator();
 
+			@Override
 			public boolean hasNext() {
 				getterCalled();
 				return it.hasNext();
 			}
 
-			public Object next() {
+			@Override
+			public E next() {
 				getterCalled();
-				Object masterElement = it.next();
+				T masterElement = it.next();
 				return cache.get(masterElement);
 			}
 
+			@Override
 			public void remove() {
 				throw new UnsupportedOperationException();
 			}
 		};
 	}
 
-	public Object move(int oldIndex, int newIndex) {
+	@Override
+	public E move(int oldIndex, int newIndex) {
 		throw new UnsupportedOperationException();
 	}
 
+	@Override
 	public boolean remove(Object o) {
 		throw new UnsupportedOperationException();
 	}
 
-	public boolean removeAll(Collection c) {
+	@Override
+	public boolean removeAll(Collection<?> c) {
 		throw new UnsupportedOperationException();
 	}
 
-	public boolean retainAll(Collection c) {
+	@Override
+	public boolean retainAll(Collection<?> c) {
 		throw new UnsupportedOperationException();
 	}
 
+	@Override
 	public Object[] toArray() {
 		getterCalled();
 		Object[] masterElements = masterList.toArray();
@@ -192,53 +215,62 @@ public class ListDelegatingValueObservableList extends AbstractObservableList
 		return result;
 	}
 
-	public Object[] toArray(Object[] a) {
+	@Override
+	@SuppressWarnings("unchecked")
+	public <U> U[] toArray(U[] a) {
 		getterCalled();
 		Object[] masterElements = masterList.toArray();
 		if (a.length < masterElements.length)
-			a = (Object[]) Array.newInstance(a.getClass().getComponentType(),
-					masterElements.length);
+			a = (U[]) Array.newInstance(a.getClass().getComponentType(), masterElements.length);
 		for (int i = 0; i < masterElements.length; i++) {
-			a[i] = cache.get(masterElements[i]);
+			a[i] = (U) cache.get(masterElements[i]);
 		}
 		return a;
 	}
 
+	@Override
 	public void add(int index, Object o) {
 		throw new UnsupportedOperationException();
 	}
 
+	@Override
 	public void clear() {
 		throw new UnsupportedOperationException();
 	}
 
-	public ListIterator listIterator() {
+	@Override
+	public ListIterator<E> listIterator() {
 		return listIterator(0);
 	}
 
-	public ListIterator listIterator(final int index) {
+	@Override
+	public ListIterator<E> listIterator(final int index) {
 		getterCalled();
-		return new ListIterator() {
-			ListIterator it = masterList.listIterator(index);
-			Object lastMasterElement;
-			Object lastElement;
+		return new ListIterator<E>() {
+			ListIterator<T> it = masterList.listIterator(index);
+			T lastMasterElement;
+			E lastElement;
 			boolean haveIterated = false;
 
+			@Override
 			public void add(Object arg0) {
 				throw new UnsupportedOperationException();
 			}
 
+			@Override
 			public boolean hasNext() {
 				getterCalled();
 				return it.hasNext();
 			}
 
+			@Override
 			public boolean hasPrevious() {
 				getterCalled();
 				return it.hasPrevious();
 			}
 
-			public Object next() {
+			@Override
+			public E next() {
 				getterCalled();
 				lastMasterElement = it.next();
 				lastElement = cache.get(lastMasterElement);
@@ -246,12 +278,14 @@ public class ListDelegatingValueObservableList extends AbstractObservableList
 				return lastElement;
 			}
 
+			@Override
 			public int nextIndex() {
 				getterCalled();
 				return it.nextIndex();
 			}
 
-			public Object previous() {
+			@Override
+			public E previous() {
 				getterCalled();
 				lastMasterElement = it.previous();
 				lastElement = cache.get(lastMasterElement);
@@ -259,16 +293,19 @@ public class ListDelegatingValueObservableList extends AbstractObservableList
 				return lastElement;
 			}
 
+			@Override
 			public int previousIndex() {
 				getterCalled();
 				return it.previousIndex();
 			}
 
+			@Override
 			public void remove() {
 				throw new UnsupportedOperationException();
 			}
 
-			public void set(Object o) {
+			@Override
+			public void set(E o) {
 				checkRealm();
 				if (!haveIterated)
 					throw new IllegalStateException();
@@ -281,54 +318,58 @@ public class ListDelegatingValueObservableList extends AbstractObservableList
 	}
 
 	private int[] indicesOf(Object masterElement) {
-		List indices = new ArrayList();
+		List<Integer> indices = new ArrayList<>();
 
-		for (ListIterator it = masterList.listIterator(); it.hasNext();) {
+		for (ListIterator<T> it = masterList.listIterator(); it.hasNext();) {
 			if (masterElement == it.next())
-				indices.add(new Integer(it.previousIndex()));
+				indices.add(Integer.valueOf(it.previousIndex()));
 		}
 
 		int[] result = new int[indices.size()];
 		for (int i = 0; i < result.length; i++) {
-			result[i] = ((Integer) indices.get(i)).intValue();
+			result[i] = indices.get(i).intValue();
 		}
 		return result;
 	}
 
-	private void fireListChange(int[] indices, Object oldValue, Object newValue) {
-		ListDiffEntry[] differences = new ListDiffEntry[indices.length * 2];
+	private void fireListChange(int[] indices, E oldValue, E newValue) {
+		List<ListDiffEntry<E>> differences = new ArrayList<>(indices.length * 2);
 		for (int i = 0; i < indices.length; i++) {
 			int index = indices[i];
-			differences[i * 2] = Diffs.createListDiffEntry(index, false,
-					oldValue);
-			differences[i * 2 + 1] = Diffs.createListDiffEntry(index, true,
-					newValue);
+			differences.add(Diffs.createListDiffEntry(index, false, oldValue));
+			differences.add(Diffs.createListDiffEntry(index, true, newValue));
 		}
 		fireListChange(Diffs.createListDiff(differences));
 	}
 
-	public Object remove(int index) {
+	@Override
+	public E remove(int index) {
 		throw new UnsupportedOperationException();
 	}
 
-	public Object set(int index, Object o) {
+	@Override
+	public E set(int index, E o) {
 		checkRealm();
-		Object masterElement = masterList.get(index);
+		T masterElement = masterList.get(index);
 		return cache.put(masterElement, o);
 	}
 
+	@Override
 	public Object getObserved() {
 		return masterList;
 	}
 
-	public IProperty getProperty() {
+	@Override
+	public DelegatingValueProperty<S, E> getProperty() {
 		return detailProperty;
 	}
 
+	@Override
 	public Object getElementType() {
 		return detailProperty.getValueType();
 	}
 
+	@Override
 	public synchronized void dispose() {
 		if (masterList != null) {
 			masterList.removeListChangeListener(masterListener);
