@@ -1,16 +1,19 @@
  /****************************************************************************
- * Copyright (c) 2000, 2013 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
- *
- * Contributors:
- *     IBM Corporation - initial API and implementation
- *     Dina Sayed, dsayed@eg.ibm.com, IBM -  bug 269844
- *     Markus Schorn (Wind River Systems) -  bug 284447
- *     James Blackburn (Broadcom Corp.)   -  bug 340978
- *******************************************************************************/
+* Copyright (c) 2000, 2016 IBM Corporation and others.
+* All rights reserved. This program and the accompanying materials
+* are made available under the terms of the Eclipse Public License v1.0
+* which accompanies this distribution, and is available at
+* http://www.eclipse.org/legal/epl-v10.html
+*
+* Contributors:
+*     IBM Corporation - initial API and implementation
+*     Dina Sayed, dsayed@eg.ibm.com, IBM -  bug 269844
+*     Markus Schorn (Wind River Systems) -  bug 284447
+*     James Blackburn (Broadcom Corp.)   -  bug 340978
+*     Lars Vogel <Lars.Vogel@vogella.com> - Bug 458832
+*     Christian Georgi (SAP SE)          -  bug 458811
+*     Mickael Istria (Red Hat Inc.) - Bug 486901
+*******************************************************************************/
 package org.eclipse.ui.internal.ide.dialogs;
 
 import java.util.Collections;
@@ -19,16 +22,21 @@ import java.util.List;
 import org.eclipse.core.resources.IWorkspaceDescription;
 import org.eclipse.core.resources.ResourcesPlugin;
 import org.eclipse.core.runtime.CoreException;
+import org.eclipse.core.runtime.Platform;
 import org.eclipse.core.runtime.Preferences;
+import org.eclipse.e4.core.contexts.IEclipseContext;
+import org.eclipse.e4.ui.internal.workbench.E4Workbench;
+import org.eclipse.jface.layout.GridDataFactory;
+import org.eclipse.jface.layout.GridLayoutFactory;
 import org.eclipse.jface.preference.FieldEditor;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.preference.IntegerFieldEditor;
 import org.eclipse.jface.preference.PreferencePage;
 import org.eclipse.jface.preference.RadioGroupFieldEditor;
 import org.eclipse.jface.preference.StringFieldEditor;
-import org.eclipse.jface.util.IPropertyChangeListener;
-import org.eclipse.jface.util.PropertyChangeEvent;
+import org.eclipse.jface.util.BidiUtils;
 import org.eclipse.osgi.util.NLS;
+import org.eclipse.osgi.util.TextProcessor;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
@@ -36,12 +44,14 @@ import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
 import org.eclipse.swt.widgets.Label;
+import org.eclipse.swt.widgets.Text;
 import org.eclipse.ui.IWorkbenchPreferencePage;
 import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.WorkbenchEncoding;
 import org.eclipse.ui.dialogs.PreferenceLinkArea;
 import org.eclipse.ui.ide.IDEEncoding;
 import org.eclipse.ui.ide.dialogs.ResourceEncodingFieldEditor;
+import org.eclipse.ui.internal.WorkbenchMessages;
 import org.eclipse.ui.internal.ide.IDEInternalPreferences;
 import org.eclipse.ui.internal.ide.IDEWorkbenchMessages;
 import org.eclipse.ui.internal.ide.IDEWorkbenchPlugin;
@@ -56,8 +66,9 @@ import org.eclipse.ui.preferences.IWorkbenchPreferenceContainer;
  *Note:This class extends from PreferencePage,and there's no WorkspacePreferencePage class.
  *Hence when the IDE settings doesn't appear in this preference page, this page will be empty.
  */
-public class IDEWorkspacePreferencePage extends PreferencePage
-        implements IWorkbenchPreferencePage{
+public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkbenchPreferencePage {
+
+	private IEclipseContext e4Context;
 
 	private Button autoBuildButton;
 
@@ -66,6 +77,7 @@ public class IDEWorkspacePreferencePage extends PreferencePage
     private IntegerFieldEditor saveInterval;
 
 	private FieldEditor workspaceName;
+	private Button showLocationInWindowTitle;
 
 	private Button autoRefreshButton;
 
@@ -76,7 +88,7 @@ public class IDEWorkspacePreferencePage extends PreferencePage
 	private ResourceEncodingFieldEditor encodingEditor;
 
 	private LineDelimiterEditor lineSeparatorEditor;
-	
+
     //A boolean to indicate if the user settings were cleared.
 	private boolean clearUserSettings = false;
 
@@ -84,12 +96,8 @@ public class IDEWorkspacePreferencePage extends PreferencePage
 
 	private StringFieldEditor systemExplorer;
 
-    /*
-     * (non-Javadoc)
-     * 
-     * @see org.eclipse.jface.preference.PreferencePage
-     */
-    protected Control createContents(Composite parent) {
+    @Override
+	protected Control createContents(Composite parent) {
 
     	PlatformUI.getWorkbench().getHelpSystem().setHelp(parent,
 				IIDEHelpContextIds.WORKSPACE_PREFERENCE_PAGE);
@@ -102,36 +110,37 @@ public class IDEWorkspacePreferencePage extends PreferencePage
 
 		GridData data = new GridData(GridData.FILL_HORIZONTAL | GridData.GRAB_HORIZONTAL);
 		area.getControl().setLayoutData(data);
-        
-		Label space = new Label(composite,SWT.NONE);
-		space.setLayoutData(new GridData());
-		
+
+		createSpace(composite);
         createAutoBuildPref(composite);
         createAutoRefreshControls(composite);
         createSaveAllBeforeBuildPref(composite);
         createCloseUnrelatedProjPrefControls(composite);
-        
-        createSpace(composite);
-        createSaveIntervalGroup(composite);
-        createWindowTitleGroup(composite);
+
 		createSpace(composite);
-		
+		createSaveIntervalGroup(composite);
+		createWindowTitleGroup(composite);
+
+		createSpace(composite);
+		createWorkspaceLocationGroup(composite);
+
+		createSpace(composite);
 		createOpenPrefControls(composite);
 
 		createSpace(composite);
 		createSystemExplorerGroup(composite);
 		createSpace(composite);
-		
+
 		Composite lower = new Composite(composite,SWT.NONE);
 		GridLayout lowerLayout = new GridLayout();
 		lowerLayout.marginWidth = 0;
 		lowerLayout.numColumns = 2;
 		lowerLayout.makeColumnsEqualWidth = true;
 		lower.setLayout(lowerLayout);
-		
+
 		lower.setLayoutData(new GridData(
                 GridData.HORIZONTAL_ALIGN_FILL | GridData.GRAB_HORIZONTAL));
-		
+
 		createEncodingEditorControls(lower);
 		createLineSeparatorEditorControls(lower);
 		applyDialogFont(composite);
@@ -183,10 +192,50 @@ public class IDEWorkspacePreferencePage extends PreferencePage
                 .isAutoBuilding());
     }
 
+	/**
+	 * Create a composite that contains entry fields specifying the workspace
+	 * location.
+	 *
+	 * @param composite
+	 *            the Composite the group is created in.
+	 */
+	private void createWorkspaceLocationGroup(Composite composite) {
+		Composite groupComposite = new Composite(composite, SWT.LEFT);
+		GridDataFactory.fillDefaults().grab(true, false).applyTo(groupComposite);
+		GridLayoutFactory.fillDefaults().numColumns(2).applyTo(groupComposite);
+
+		// true workspace location
+		Label locationLabel = new Label(groupComposite, SWT.NONE);
+		locationLabel.setText(IDEWorkbenchMessages.IDEWorkspacePreference_workspaceLocation);
+		GridDataFactory.fillDefaults().align(SWT.BEGINNING, SWT.CENTER).applyTo(locationLabel);
+		Text workspacePath = new Text(groupComposite, SWT.READ_ONLY);
+		workspacePath.setBackground(workspacePath.getDisplay().getSystemColor(SWT.COLOR_WIDGET_BACKGROUND));
+		workspacePath.setText(TextProcessor.process(Platform.getLocation().toOSString()));
+		workspacePath.setSelection(workspacePath.getText().length());
+		GridDataFactory.fillDefaults().align(SWT.FILL, SWT.CENTER).grab(true, false)
+				.hint(convertHorizontalDLUsToPixels(200), SWT.DEFAULT).applyTo(workspacePath);
+
+		// show workspace location in window title
+		boolean showLocationIsSetOnCommandLine = e4Context.containsKey(E4Workbench.FORCED_SHOW_LOCATION);
+		showLocationInWindowTitle = new Button(groupComposite, SWT.CHECK);
+		showLocationInWindowTitle.setText(IDEWorkbenchMessages.IDEWorkspacePreference_showLocationInWindowTitle);
+		showLocationInWindowTitle.setSelection(showLocationIsSetOnCommandLine
+				|| getIDEPreferenceStore().getBoolean(IDEInternalPreferences.SHOW_LOCATION));
+		showLocationInWindowTitle.setEnabled(!showLocationIsSetOnCommandLine);
+		GridDataFactory.fillDefaults().grab(true, false).span(2, 1).applyTo(showLocationInWindowTitle);
+
+		if (showLocationIsSetOnCommandLine) {
+			Composite noteComposite = createNoteComposite(composite.getFont(), groupComposite,
+					WorkbenchMessages.Preference_note,
+					IDEWorkbenchMessages.IDEWorkspacePreference_showLocationInWindowTitle_lockedByCommandLine);
+			GridDataFactory.fillDefaults().grab(true, false).span(2, 1).applyTo(noteComposite);
+		}
+	}
+
     /**
      * Create a composite that contains entry fields specifying save interval
      * preference.
-     * 
+     *
      * @param composite the Composite the group is created in.
      */
     private void createSaveIntervalGroup(Composite composite) {
@@ -210,7 +259,8 @@ public class IDEWorkspacePreferencePage extends PreferencePage
         saveInterval.setPage(this);
         saveInterval.setTextLimit(Integer.toString(
                 IDEInternalPreferences.MAX_SAVE_INTERVAL).length());
-        saveInterval.setErrorMessage(NLS.bind(IDEWorkbenchMessages.WorkbenchPreference_saveIntervalError, new Integer(IDEInternalPreferences.MAX_SAVE_INTERVAL)));
+		saveInterval.setErrorMessage(NLS.bind(IDEWorkbenchMessages.WorkbenchPreference_saveIntervalError,
+				Integer.valueOf(IDEInternalPreferences.MAX_SAVE_INTERVAL)));
         saveInterval
                 .setValidateStrategy(StringFieldEditor.VALIDATE_ON_KEY_STROKE);
         saveInterval.setValidRange(1, IDEInternalPreferences.MAX_SAVE_INTERVAL);
@@ -220,21 +270,18 @@ public class IDEWorkspacePreferencePage extends PreferencePage
         long interval = description.getSnapshotInterval() / 60000;
         saveInterval.setStringValue(Long.toString(interval));
 
-        saveInterval.setPropertyChangeListener(new IPropertyChangeListener() {
-
-            public void propertyChange(PropertyChangeEvent event) {
-                if (event.getProperty().equals(FieldEditor.IS_VALID)) {
-					setValid(saveInterval.isValid());
-				}
-            }
-        });
+        saveInterval.setPropertyChangeListener(event -> {
+		    if (event.getProperty().equals(FieldEditor.IS_VALID)) {
+				setValid(saveInterval.isValid());
+			}
+		});
 
     }
 
     /**
      * Create a composite that contains entry fields specifying the workspace name
      * preference.
-     * 
+     *
      * @param composite the Composite the group is created in.
      */
     private void createWindowTitleGroup(Composite composite) {
@@ -257,10 +304,10 @@ public class IDEWorkspacePreferencePage extends PreferencePage
     }
 
 	/**
-     * Create the Refresh controls
-     * 
-     * @param parent
-     */
+	 * Create the Refresh controls
+	 *
+	 * @param parent
+	 */
     private void createAutoRefreshControls(Composite parent) {
 
         this.autoRefreshButton = new Button(parent, SWT.CHECK);
@@ -271,49 +318,42 @@ public class IDEWorkspacePreferencePage extends PreferencePage
         this.lightweightRefreshButton.setText(IDEWorkbenchMessages.IDEWorkspacePreference_RefreshLightweightButtonText);
         this.lightweightRefreshButton.setToolTipText(IDEWorkbenchMessages.IDEWorkspacePreference_RefreshLightweightButtonToolTip);
 
-        boolean lightweightRefresh = ResourcesPlugin.getPlugin()
-                .getPluginPreferences().getBoolean(
-                		ResourcesPlugin.PREF_LIGHTWEIGHT_AUTO_REFRESH);
-        boolean autoRefresh = ResourcesPlugin.getPlugin()
-		        .getPluginPreferences().getBoolean(
-		                ResourcesPlugin.PREF_AUTO_REFRESH);
-        
+		boolean lightweightRefresh = Platform.getPreferencesService().getBoolean(ResourcesPlugin.PI_RESOURCES,
+				ResourcesPlugin.PREF_LIGHTWEIGHT_AUTO_REFRESH, false, null);
+		boolean autoRefresh = Platform.getPreferencesService().getBoolean(ResourcesPlugin.PI_RESOURCES,
+				ResourcesPlugin.PREF_AUTO_REFRESH, false, null);
+
         this.autoRefreshButton.setSelection(autoRefresh);
         this.lightweightRefreshButton.setSelection(lightweightRefresh);
     }
 
     /**
-     * Create a composite that contains the encoding controls
-     * 
-     * @param parent
-     */
-    private void createEncodingEditorControls(Composite parent){    			
+	 * Create a composite that contains the encoding controls
+	 *
+	 * @param parent
+	 */
+    private void createEncodingEditorControls(Composite parent){
 		Composite encodingComposite = new Composite(parent,SWT.NONE);
 		encodingComposite.setLayout(new GridLayout());
 		encodingComposite.setLayoutData(new GridData(
                 GridData.HORIZONTAL_ALIGN_FILL | GridData.GRAB_HORIZONTAL));
-		
+
 		encodingEditor = new ResourceEncodingFieldEditor(IDEWorkbenchMessages.WorkbenchPreference_encoding, encodingComposite, ResourcesPlugin
 				.getWorkspace().getRoot());
 
 		encodingEditor.setPage(this);
 		encodingEditor.load();
-		encodingEditor.setPropertyChangeListener(new IPropertyChangeListener() {
-			/* (non-Javadoc)
-			 * @see org.eclipse.jface.util.IPropertyChangeListener#propertyChange(org.eclipse.jface.util.PropertyChangeEvent)
-			 */
-			public void propertyChange(PropertyChangeEvent event) {
-				if (event.getProperty().equals(FieldEditor.IS_VALID)) {
-					setValid(encodingEditor.isValid());
-				}
-
+		encodingEditor.setPropertyChangeListener(event -> {
+			if (event.getProperty().equals(FieldEditor.IS_VALID)) {
+				setValid(encodingEditor.isValid());
 			}
+
 		});
     }
-    
+
     /**
      * Create a composite that contains the line delimiter controls
-     * 
+     *
      * @param parent
      */
     private void createLineSeparatorEditorControls(Composite parent){
@@ -325,14 +365,14 @@ public class IDEWorkspacePreferencePage extends PreferencePage
 
 		lineComposite.setLayoutData(new GridData(
                 GridData.HORIZONTAL_ALIGN_FILL | GridData.GRAB_HORIZONTAL));
-		
+
 		lineSeparatorEditor = new LineDelimiterEditor(lineComposite);
 		lineSeparatorEditor.doLoad();
     }
 
 	/**
 	 * Create the widget for the system explorer command.
-	 * 
+	 *
 	 * @param composite
 	 */
 	protected void createSystemExplorerGroup(Composite composite) {
@@ -347,7 +387,9 @@ public class IDEWorkspacePreferencePage extends PreferencePage
 
 		systemExplorer = new StringFieldEditor(IDEInternalPreferences.WORKBENCH_SYSTEM_EXPLORER,
 				IDEWorkbenchMessages.IDEWorkbenchPreference_workbenchSystemExplorer, 40, groupComposite);
-		gd = (GridData) systemExplorer.getTextControl(groupComposite).getLayoutData();
+		Text textControl = systemExplorer.getTextControl(groupComposite);
+		BidiUtils.applyBidiProcessing(textControl, BidiUtils.LEFT_TO_RIGHT);
+		gd = (GridData) textControl.getLayoutData();
 		gd.horizontalAlignment = GridData.FILL;
 		gd.grabExcessHorizontalSpace = true;
 		systemExplorer.setPreferenceStore(getIDEPreferenceStore());
@@ -355,11 +397,9 @@ public class IDEWorkspacePreferencePage extends PreferencePage
 
 		systemExplorer.load();
 
-		systemExplorer.setPropertyChangeListener(new IPropertyChangeListener() {
-			public void propertyChange(PropertyChangeEvent event) {
-				if (event.getProperty().equals(FieldEditor.IS_VALID)) {
-					setValid(systemExplorer.isValid());
-				}
+		systemExplorer.setPropertyChangeListener(event -> {
+			if (event.getProperty().equals(FieldEditor.IS_VALID)) {
+				setValid(systemExplorer.isValid());
 			}
 		});
 	}
@@ -371,10 +411,10 @@ public class IDEWorkspacePreferencePage extends PreferencePage
     protected IPreferenceStore getIDEPreferenceStore() {
         return IDEWorkbenchPlugin.getDefault().getPreferenceStore();
     }
-	
+
 	/**
      * Creates a tab of one horizontal spans.
-     * 
+     *
      * @param parent
      *            the parent in which the tab should be created
      */
@@ -392,7 +432,7 @@ public class IDEWorkspacePreferencePage extends PreferencePage
 	/**
      * Creates the composite which will contain all the preference controls for
      * this page.
-     * 
+     *
      * @param parent
      *            the parent composite
      * @return the composite for this page
@@ -407,15 +447,17 @@ public class IDEWorkspacePreferencePage extends PreferencePage
                 | GridData.HORIZONTAL_ALIGN_FILL));
         return composite;
     }
-	
+
+	@Override
 	public void init(org.eclipse.ui.IWorkbench workbench) {
-        //no-op
+		e4Context = workbench.getService(IEclipseContext.class);
     }
-    
+
     /**
      * The default button has been pressed.
      */
-    protected void performDefaults() {
+    @Override
+	protected void performDefaults() {
 
         // core holds onto this preference.
         boolean autoBuild = ResourcesPlugin.getPlugin().getPluginPreferences()
@@ -427,8 +469,9 @@ public class IDEWorkspacePreferencePage extends PreferencePage
                 .setSelection(store
                         .getDefaultBoolean(IDEInternalPreferences.SAVE_ALL_BEFORE_BUILD));
         saveInterval.loadDefault();
+		showLocationInWindowTitle.setSelection(store.getDefaultBoolean(IDEInternalPreferences.SHOW_LOCATION));
         workspaceName.loadDefault();
-        
+
         boolean closeUnrelatedProj = store.getDefaultBoolean(IDEInternalPreferences.CLOSE_UNRELATED_PROJECTS);
         closeUnrelatedProjectButton.setSelection(closeUnrelatedProj);
 
@@ -457,7 +500,8 @@ public class IDEWorkspacePreferencePage extends PreferencePage
     /**
      * The user has pressed Ok. Store/apply this page's values appropriately.
      */
-    public boolean performOk() {
+    @Override
+	public boolean performOk() {
         // set the workspace auto-build flag
         IWorkspaceDescription description = ResourcesPlugin.getWorkspace()
                 .getDescription();
@@ -484,23 +528,22 @@ public class IDEWorkspacePreferencePage extends PreferencePage
         // core's pref. ours is not up-to-date anyway if someone changes this
         // interval directly thru core api.
         long oldSaveInterval = description.getSnapshotInterval() / 60000;
-        long newSaveInterval = new Long(saveInterval.getStringValue())
-                .longValue();
+        long newSaveInterval = Long.parseLong(saveInterval.getStringValue());
         if (oldSaveInterval != newSaveInterval) {
             try {
                 description.setSnapshotInterval(newSaveInterval * 60000);
                 ResourcesPlugin.getWorkspace().setDescription(description);
-                store.firePropertyChangeEvent(
-                        IDEInternalPreferences.SAVE_INTERVAL, new Integer(
-                                (int) oldSaveInterval), new Integer(
-                                (int) newSaveInterval));
+                store.firePropertyChangeEvent(IDEInternalPreferences.SAVE_INTERVAL, (int) oldSaveInterval,
+                    (int) newSaveInterval);
             } catch (CoreException e) {
                 IDEWorkbenchPlugin.log(
                         "Error changing save interval preference", e //$NON-NLS-1$
                                 .getStatus());
             }
         }
-        
+
+		store.setValue(IDEInternalPreferences.SHOW_LOCATION, showLocationInWindowTitle.getSelection());
+
         workspaceName.store();
 
 		systemExplorer.store();
@@ -515,8 +558,8 @@ public class IDEWorkspacePreferencePage extends PreferencePage
 
         boolean closeUnrelatedProj = closeUnrelatedProjectButton.getSelection();
         getIDEPreferenceStore().setValue(IDEInternalPreferences.CLOSE_UNRELATED_PROJECTS, closeUnrelatedProj);
-        
-        
+
+
         if (clearUserSettings) {
 			IDEEncoding.clearUserEncodings();
 		}
