@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2010 Tom Schindl and others.
+ * Copyright (c) 2006, 2016 Tom Schindl and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,6 +7,8 @@
  *
  * Contributors:
  *     Tom Schindl - initial API and implementation
+ *     Jeanderson Candido <http://jeandersonbc.github.io> - Bug 414565
+ *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 475361, 489234
  *******************************************************************************/
 
 package org.eclipse.jface.snippets.viewers;
@@ -14,6 +16,7 @@ package org.eclipse.jface.snippets.viewers;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
+import java.util.List;
 
 import org.eclipse.jface.viewers.CellEditor;
 import org.eclipse.jface.viewers.CheckboxCellEditor;
@@ -169,7 +172,7 @@ public class Snippet048TreeViewerTabWithCheckboxFor3_3 {
 
 			@Override
 			protected Object getValue(Object element) {
-				return new Boolean(((MyModel) element).bool);
+				return Boolean.valueOf(((MyModel) element).bool);
 			}
 
 			@Override
@@ -192,7 +195,7 @@ public class Snippet048TreeViewerTabWithCheckboxFor3_3 {
 					try {
 						Method m = ColumnViewerEditor.class.getDeclaredMethod("processTraverseEvent", new Class[] {int.class,ViewerRow.class,TraverseEvent.class});
 						m.setAccessible(true);
-						m.invoke(editor, new Object[] { new Integer(cell.getColumnIndex()), cell.getViewerRow(), e });
+						m.invoke(editor, new Object[] { Integer.valueOf(cell.getColumnIndex()), cell.getViewerRow(), e });
 					} catch (SecurityException e1) {
 						// TODO Auto-generated catch block
 						e1.printStackTrace();
@@ -286,12 +289,10 @@ public class Snippet048TreeViewerTabWithCheckboxFor3_3 {
 	}
 
 	public class MyModel {
+
 		public MyModel parent;
-
-		public ArrayList child = new ArrayList();
-
+		public List<MyModel> child = new ArrayList<>();
 		public int counter;
-
 		public boolean bool;
 
 		public MyModel(int counter, MyModel parent) {
@@ -305,7 +306,6 @@ public class Snippet048TreeViewerTabWithCheckboxFor3_3 {
 			if (parent != null) {
 				rv = parent.toString() + ".";
 			}
-
 			rv += counter;
 
 			return rv;
