@@ -24,9 +24,9 @@ import org.eclipse.ui.XMLMemento;
 /**
  * Testing XMLMemento (see bug 93262). Emphasis is on ensuring that the 3.1
  * version behaves just like the 3.0.1 version.
- * 
+ *
  * @since 3.1
- * 
+ *
  */
 public class XMLMementoTest extends TestCase {
 
@@ -61,10 +61,12 @@ public class XMLMementoTest extends TestCase {
 		try {
 			XMLMemento.createReadRoot(new Reader() {
 
+				@Override
 				public void close() throws IOException {
 					throw new IOException();
 				}
 
+				@Override
 				public int read(char[] arg0, int arg1, int arg2)
 						throws IOException {
 					throw new IOException();
@@ -94,8 +96,7 @@ public class XMLMementoTest extends TestCase {
 	public void testCreateWriteRoot() {
 		String[] rootTypes = { "type", "type.with.dots",
 				"type_with_underscores" };
-		for (int i = 0; i < rootTypes.length; i++) {
-			String type = rootTypes[i];
+		for (String type : rootTypes) {
 			XMLMemento memento = XMLMemento.createWriteRoot(type);
 			assertNotNull(memento);
 		}
@@ -130,6 +131,7 @@ public class XMLMementoTest extends TestCase {
 
 		testPutAndGet(new MementoChecker() {
 
+			@Override
 			public void prepareAndCheckBeforeSerialization(
 					XMLMemento mementoToSerialize) {
 				IMemento child = mementoToSerialize.createChild("c", "i");
@@ -139,6 +141,7 @@ public class XMLMementoTest extends TestCase {
 				checkMemento(copiedChild, true);
 			}
 
+			@Override
 			public void checkAfterDeserialization(XMLMemento deserializedMemento) {
 				IMemento child = deserializedMemento.getChild("c");
 				checkMemento(child, true);
@@ -154,7 +157,7 @@ public class XMLMementoTest extends TestCase {
 
 	/**
 	 * Helper method to fill a memento to be checked later by checkMemento.
-	 * 
+	 *
 	 * @param memento
 	 */
 	private void fillMemento(IMemento memento) {
@@ -171,7 +174,7 @@ public class XMLMementoTest extends TestCase {
 	 * Helper method to check if the values set by fillMemento are still there.
 	 * The boolean parameter is needed because in some cases
 	 * (IMememento#putMemento), the text data gets lost.
-	 * 
+	 *
 	 * @param memento
 	 * @param checkForTextData
 	 */
@@ -201,6 +204,7 @@ public class XMLMementoTest extends TestCase {
 
 		testPutAndGet(new MementoChecker() {
 
+			@Override
 			public void prepareAndCheckBeforeSerialization(
 					XMLMemento mementoToSerialize) {
 				// check that nothing is there yet
@@ -219,6 +223,7 @@ public class XMLMementoTest extends TestCase {
 				assertEquals(id, child2.getID());
 			}
 
+			@Override
 			public void checkAfterDeserialization(XMLMemento deserializedMemento) {
 				IMemento child1 = deserializedMemento.getChild(type1);
 				assertNotNull(child1);
@@ -236,6 +241,7 @@ public class XMLMementoTest extends TestCase {
 
 		testPutAndGet(new MementoChecker() {
 
+			@Override
 			public void prepareAndCheckBeforeSerialization(
 					XMLMemento mementoToSerialize) {
 				// check that nothing is there yet
@@ -253,6 +259,7 @@ public class XMLMementoTest extends TestCase {
 				assertEquals(id2, child2.getID());
 			}
 
+			@Override
 			public void checkAfterDeserialization(XMLMemento deserializedMemento) {
 				IMemento[] children = deserializedMemento.getChildren(type);
 				assertNotNull(children);
@@ -274,11 +281,10 @@ public class XMLMementoTest extends TestCase {
 				"id<with<lessthan", "id>with>greaterthan", "id&with&ampersand",
 				"id\"with\"quote", "id#with#hash" };
 
-		for (int i = 0; i < ids.length; i++) {
-			final String id = ids[i];
-
+		for (final String id : ids) {
 			testPutAndGet(new MementoChecker() {
 
+				@Override
 				public void prepareAndCheckBeforeSerialization(
 						XMLMemento mementoToSerialize) {
 					assertEquals(null, mementoToSerialize.getChild(type));
@@ -286,6 +292,7 @@ public class XMLMementoTest extends TestCase {
 					assertEquals(id, child.getID());
 				}
 
+				@Override
 				public void checkAfterDeserialization(
 						XMLMemento deserializedMemento) {
 					IMemento child = deserializedMemento.getChild(type);
@@ -305,10 +312,10 @@ public class XMLMementoTest extends TestCase {
 				new Float(Float.NaN), new Float(Float.POSITIVE_INFINITY),
 				new Float(Float.NEGATIVE_INFINITY) };
 
-		for (int i = 0; i < values.length; i++) {
-			final Float value = values[i];
+		for (final Float value : values) {
 			testPutAndGet(new MementoChecker() {
 
+				@Override
 				public void prepareAndCheckBeforeSerialization(
 						XMLMemento mementoToSerialize) {
 					assertEquals(null, mementoToSerialize.getFloat(key));
@@ -316,6 +323,7 @@ public class XMLMementoTest extends TestCase {
 					assertEquals(value, mementoToSerialize.getFloat(key));
 				}
 
+				@Override
 				public void checkAfterDeserialization(
 						XMLMemento deserializedMemento) {
 					assertEquals(value, deserializedMemento.getFloat(key));
@@ -327,15 +335,14 @@ public class XMLMementoTest extends TestCase {
 	public void testPutAndGetInteger() throws WorkbenchException, IOException {
 		final String key = "key";
 
-		Integer[] values = new Integer[] { new Integer(36254), new Integer(0),
-				new Integer(1), new Integer(-36254),
-				new Integer(Integer.MAX_VALUE), new Integer(Integer.MIN_VALUE) };
+		Integer[] values = new Integer[] { Integer.valueOf(36254), Integer.valueOf(0),
+				Integer.valueOf(1), Integer.valueOf(-36254),
+				Integer.valueOf(Integer.MAX_VALUE), Integer.valueOf(Integer.MIN_VALUE) };
 
-		for (int i = 0; i < values.length; i++) {
-			final Integer value = values[i];
-
+		for (final Integer value : values) {
 			testPutAndGet(new MementoChecker() {
 
+				@Override
 				public void prepareAndCheckBeforeSerialization(
 						XMLMemento mementoToSerialize) {
 					assertEquals(null, mementoToSerialize.getInteger(key));
@@ -343,6 +350,7 @@ public class XMLMementoTest extends TestCase {
 					assertEquals(value, mementoToSerialize.getInteger(key));
 				}
 
+				@Override
 				public void checkAfterDeserialization(
 						XMLMemento deserializedMemento) {
 					assertEquals(value, deserializedMemento.getInteger(key));
@@ -355,6 +363,7 @@ public class XMLMementoTest extends TestCase {
 	public void testPutMemento() throws WorkbenchException, IOException {
 		testPutAndGet(new MementoChecker() {
 
+			@Override
 			public void prepareAndCheckBeforeSerialization(
 					XMLMemento mementoToSerialize) {
 				mementoToSerialize.putTextData("unchanged text data");
@@ -375,6 +384,7 @@ public class XMLMementoTest extends TestCase {
 						.getString("neverlost"));
 			}
 
+			@Override
 			public void checkAfterDeserialization(XMLMemento deserializedMemento) {
 				// do not check for text data:
 				checkMemento(deserializedMemento, false);
@@ -393,11 +403,10 @@ public class XMLMementoTest extends TestCase {
 		// values with newline, tab, or return characters lead to bug 93720.
 		String[] values = TEST_STRINGS;
 
-		for (int i = 0; i < values.length; i++) {
-			final String value = values[i];
-
+		for (final String value : values) {
 			testPutAndGet(new MementoChecker() {
 
+				@Override
 				public void prepareAndCheckBeforeSerialization(
 						XMLMemento mementoToSerialize) {
 					assertEquals(null, mementoToSerialize.getString(key));
@@ -407,6 +416,7 @@ public class XMLMementoTest extends TestCase {
 					helper.toString();
 				}
 
+				@Override
 				public void checkAfterDeserialization(
 						XMLMemento deserializedMemento) {
 					assertEquals(value, deserializedMemento.getString(key));
@@ -418,10 +428,10 @@ public class XMLMementoTest extends TestCase {
 	public void testPutAndGetTextData() throws WorkbenchException, IOException {
 		String[] values = TEST_STRINGS;
 
-		for (int i = 0; i < values.length; i++) {
-			final String data = values[i];
+		for (final String data : values) {
 			testPutAndGet(new MementoChecker() {
 
+				@Override
 				public void prepareAndCheckBeforeSerialization(
 						XMLMemento mementoToSerialize) {
 					assertEquals(null, mementoToSerialize.getTextData());
@@ -429,6 +439,7 @@ public class XMLMementoTest extends TestCase {
 					assertEquals(data, mementoToSerialize.getTextData());
 				}
 
+				@Override
 				public void checkAfterDeserialization(
 						XMLMemento deserializedMemento) {
 					if (data.equals("")) {
@@ -446,10 +457,10 @@ public class XMLMementoTest extends TestCase {
 		String[] legalKeys = { "value", "value.with.many.dots",
 				"value_with_underscores" };
 
-		for (int i = 0; i < legalKeys.length; i++) {
-			final String key = legalKeys[i];
+		for (final String key : legalKeys) {
 			testPutAndGet(new MementoChecker() {
 
+				@Override
 				public void prepareAndCheckBeforeSerialization(
 						XMLMemento mementoToSerialize) {
 					assertEquals(null, mementoToSerialize.getString(key));
@@ -463,6 +474,7 @@ public class XMLMementoTest extends TestCase {
 							.getString(key));
 				}
 
+				@Override
 				public void checkAfterDeserialization(
 						XMLMemento deserializedMemento) {
 					assertEquals("some string", deserializedMemento
@@ -479,8 +491,7 @@ public class XMLMementoTest extends TestCase {
 				"key\nkey", "key<with<lessthan", "key>with>greaterthan",
 				"key&with&ampersand", "key#with#hash", "key\"with\"quote", "\"" };
 
-		for (int i = 0; i < illegalKeys.length; i++) {
-			final String key = illegalKeys[i];
+		for (final String key : illegalKeys) {
 			XMLMemento memento = XMLMemento.createWriteRoot("foo");
 			try {
 				memento.putString(key, "some string");
@@ -496,6 +507,7 @@ public class XMLMementoTest extends TestCase {
 		final String textData = "\n\tThis is\ntext data\n\t\twith newlines and \ttabs\t\n\t ";
 		testPutAndGet(new MementoChecker() {
 
+			@Override
 			public void prepareAndCheckBeforeSerialization(
 					XMLMemento mementoToSerialize) {
 				mementoToSerialize.createChild("type", "id");
@@ -505,6 +517,7 @@ public class XMLMementoTest extends TestCase {
 				assertEquals(textData, mementoToSerialize.getTextData());
 			}
 
+			@Override
 			public void checkAfterDeserialization(XMLMemento deserializedMemento) {
 				assertEquals(textData, deserializedMemento.getTextData());
 			}
@@ -533,7 +546,7 @@ public class XMLMementoTest extends TestCase {
 
 		mementoChecker.checkAfterDeserialization(deserializedMemento);
 	}
-	
+
 	   public void testMementoWithTextContent113659() throws Exception {
 	        IMemento memento = XMLMemento.createWriteRoot("root");
 	        IMemento mementoWithChild = XMLMemento.createWriteRoot("root");
