@@ -34,11 +34,11 @@ import org.eclipse.ui.views.properties.TextPropertyDescriptor;
 
 /**
  *  The class implements a test for the workbench's default
- * property sheet page. It does this by firing a sequence of 
- * selection events. The property sheet view receives these events 
+ * property sheet page. It does this by firing a sequence of
+ * selection events. The property sheet view receives these events
  * and displays the properties for the selected objects.
- * We are able to test the property sheet code which displays 
- * properties and handles the transition to another set of 
+ * We are able to test the property sheet code which displays
+ * properties and handles the transition to another set of
  * properties.
  */
 
@@ -88,7 +88,7 @@ public class PropertySheetAuto extends UITestCase {
             createDescriptors();
         }
 
-        /** 
+        /**
          * Creates the property descriptors.
          * If one of the properties has a "null" value then
          * that property is not included in the list of
@@ -96,64 +96,86 @@ public class PropertySheetAuto extends UITestCase {
          */
         private void createDescriptors() {
             ArrayList list = new ArrayList(5);
-            if (modelYear != 0)
-                list.add(new TextPropertyDescriptor(MODEL_YEAR, "model year"));
-            if (color != null)
-                list.add(new ColorPropertyDescriptor(COLOR, "color"));
-            if (manufacturer != null)
-                list.add(new TextPropertyDescriptor(MANUFACTURER, "make"));
-            if (model != null)
-                list.add(new TextPropertyDescriptor(MODEL, "model"));
-            if (engineSize != 0.0)
-                list.add(new TextPropertyDescriptor(ENGINE_SIZE, "engine"));
+            if (modelYear != 0) {
+				list.add(new TextPropertyDescriptor(MODEL_YEAR, "model year"));
+			}
+            if (color != null) {
+				list.add(new ColorPropertyDescriptor(COLOR, "color"));
+			}
+            if (manufacturer != null) {
+				list.add(new TextPropertyDescriptor(MANUFACTURER, "make"));
+			}
+            if (model != null) {
+				list.add(new TextPropertyDescriptor(MODEL, "model"));
+			}
+            if (engineSize != 0.0) {
+				list.add(new TextPropertyDescriptor(ENGINE_SIZE, "engine"));
+			}
             descriptors = (IPropertyDescriptor[]) list
                     .toArray(new IPropertyDescriptor[list.size()]);
         }
 
-        public Object getEditableValue() {
+        @Override
+		public Object getEditableValue() {
             return this;
         }
 
-        public IPropertyDescriptor[] getPropertyDescriptors() {
+        @Override
+		public IPropertyDescriptor[] getPropertyDescriptors() {
             return descriptors;
         }
 
-        public Object getPropertyValue(Object id) {
-            if (id.equals(MODEL_YEAR))
-                return Integer.toString(modelYear);
-            if (id.equals(COLOR))
-                return color;
-            if (id.equals(MANUFACTURER))
-                return manufacturer;
-            if (id.equals(MODEL))
-                return model;
-            if (id.equals(ENGINE_SIZE))
-                return Double.toString(engineSize);
+        @Override
+		public Object getPropertyValue(Object id) {
+            if (id.equals(MODEL_YEAR)) {
+				return Integer.toString(modelYear);
+			}
+            if (id.equals(COLOR)) {
+				return color;
+			}
+            if (id.equals(MANUFACTURER)) {
+				return manufacturer;
+			}
+            if (id.equals(MODEL)) {
+				return model;
+			}
+            if (id.equals(ENGINE_SIZE)) {
+				return Double.toString(engineSize);
+			}
             return null;
         }
 
-        public boolean isPropertySet(Object id) {
+        @Override
+		public boolean isPropertySet(Object id) {
             return false;
         }
 
-        public void resetPropertyValue(Object id) {
+        @Override
+		public void resetPropertyValue(Object id) {
             return;
         }
 
-        public void setPropertyValue(Object id, Object value) {
-            if (id.equals(MODEL_YEAR))
-                modelYear = new Integer((String) value).intValue();
-            if (id.equals(COLOR))
-                color = (RGB) value;
-            if (id.equals(MANUFACTURER))
-                manufacturer = (String) value;
-            if (id.equals(MODEL))
-                model = (String) value;
-            if (id.equals(ENGINE_SIZE))
-                engineSize = new Double((String) value).doubleValue();
+        @Override
+		public void setPropertyValue(Object id, Object value) {
+            if (id.equals(MODEL_YEAR)) {
+				modelYear = Integer.valueOf((String) value).intValue();
+			}
+            if (id.equals(COLOR)) {
+				color = (RGB) value;
+			}
+            if (id.equals(MANUFACTURER)) {
+				manufacturer = (String) value;
+			}
+            if (id.equals(MODEL)) {
+				model = (String) value;
+			}
+            if (id.equals(ENGINE_SIZE)) {
+				engineSize = new Double((String) value).doubleValue();
+			}
         }
 
-        public String toString() {
+        @Override
+		public String toString() {
             StringBuffer s = new StringBuffer();
             s.append("<");
             if (modelYear != 0) {
@@ -205,7 +227,7 @@ public class PropertySheetAuto extends UITestCase {
         super(name);
     }
 
-    /** 
+    /**
      * Creates a array of car objects
      */
     private void createCars() {
@@ -226,26 +248,31 @@ public class PropertySheetAuto extends UITestCase {
         double engineSize = 0.0;
         // only set 25% of the properties
         int FACTOR = 4;
-        if (random.nextInt(FACTOR) < FACTOR - 1)
-            modelYear = 1990 + random.nextInt(15);
-        if (random.nextInt(FACTOR) < FACTOR - 1)
-            color = new RGB(random.nextInt(256), random.nextInt(256), random
+        if (random.nextInt(FACTOR) < FACTOR - 1) {
+			modelYear = 1990 + random.nextInt(15);
+		}
+        if (random.nextInt(FACTOR) < FACTOR - 1) {
+			color = new RGB(random.nextInt(256), random.nextInt(256), random
                     .nextInt(256));
-        if (random.nextInt(FACTOR) < FACTOR - 1)
-            manufacturer = makers[random.nextInt(makers.length)];
-        if (random.nextInt(FACTOR) < FACTOR - 1)
-            model = models[random.nextInt(models.length)];
-        if (random.nextInt(FACTOR) < FACTOR - 1)
-            engineSize = random.nextDouble() * 6;
+		}
+        if (random.nextInt(FACTOR) < FACTOR - 1) {
+			manufacturer = makers[random.nextInt(makers.length)];
+		}
+        if (random.nextInt(FACTOR) < FACTOR - 1) {
+			model = models[random.nextInt(models.length)];
+		}
+        if (random.nextInt(FACTOR) < FACTOR - 1) {
+			engineSize = random.nextDouble() * 6;
+		}
         return new Car(modelYear, color, manufacturer, model, engineSize);
     }
 
-    protected void doSetUp() throws Exception {
+    @Override
+	protected void doSetUp() throws Exception {
         super.doSetUp();
         workbenchWindow = openTestWindow();
         activePage = workbenchWindow.getActivePage();
-        while (Display.getCurrent().readAndDispatch())
-            ;
+		processUiEvents();
     }
 
     protected IWorkbenchPart createTestParts(IWorkbenchPage page)
@@ -253,78 +280,77 @@ public class PropertySheetAuto extends UITestCase {
         IViewPart view = page.showView(IPageLayout.ID_PROP_SHEET);
         selectionProviderView = (SelectionProviderView) page
                 .showView(SelectionProviderView.ID);
-        while (Display.getCurrent().readAndDispatch())
-            ;
+		processUiEvents();
         return view;
 
     }
 
-    /** 
+    /**
      * Supply selection events with a random car selection. All of these should go to
      * the properties view because it is visible.
      */
     public void testInput() throws Throwable {
-        PropertySheetPerspectiveFactory.applyPerspective(activePage); 
+        PropertySheetPerspectiveFactory.applyPerspective(activePage);
         PropertySheet propView = (PropertySheet) createTestParts(activePage);
         createCars();
 
         assertTrue("'Property' view should be visible", activePage.isPartVisible(propView));
         assertTrue("'Selection provider' view should be visible", activePage
                 .isPartVisible(selectionProviderView));
-                
+
         for (int i = 0; i < NUMBER_OF_SELECTIONS; i++) {
             // create the selection
             int numberToSelect = random.nextInt(NUMBER_OF_CARS - 2);
             ArrayList selection = new ArrayList(numberToSelect);
             while (selection.size() < numberToSelect) {
                 int j = random.nextInt(NUMBER_OF_CARS);
-                if (!selection.contains(cars[j]))
-                    selection.add(cars[j]);
+                if (!selection.contains(cars[j])) {
+					selection.add(cars[j]);
+				}
             }
             StructuredSelection structuredSelection = new StructuredSelection(
                     selection);
-            // fire the selection	
+            // fire the selection
             selectionProviderView.setSelection(structuredSelection);
-            while (Display.getCurrent().readAndDispatch())
-                ;
+			processUiEvents();
             assertEquals(structuredSelection, propView.getShowInContext().getSelection());
         }
     }
-    
-    /** 
+
+    /**
      * Supply selection events with a random car selection. None of these should go to
      * the properties view because it is hidden.
      * <p>
-     * This test invalidated by the fix for 
+     * This test invalidated by the fix for
      * https://bugs.eclipse.org/bugs/show_bug.cgi?id=267425
      * </p>
      */
     public void XtestInputIfHiddenBug69953() throws Throwable {
-        PropertySheetPerspectiveFactory2.applyPerspective(activePage); 
+        PropertySheetPerspectiveFactory2.applyPerspective(activePage);
         PropertySheet propView = (PropertySheet) createTestParts(activePage);
         createCars();
-        
+
         assertFalse("'Property' view should be hidden", activePage.isPartVisible(propView));
         assertTrue("'Selection provider' view should be visible", activePage
                 .isPartVisible(selectionProviderView));
-        
+
         for (int i = 0; i < NUMBER_OF_SELECTIONS; i++) {
             // create the selection
             int numberToSelect = random.nextInt(NUMBER_OF_CARS - 2);
             ArrayList selection = new ArrayList(numberToSelect);
             while (selection.size() < numberToSelect) {
                 int j = random.nextInt(NUMBER_OF_CARS);
-                if (!selection.contains(cars[j]))
-                    selection.add(cars[j]);
+                if (!selection.contains(cars[j])) {
+					selection.add(cars[j]);
+				}
             }
             StructuredSelection structuredSelection = new StructuredSelection(
                     selection);
-            // fire the selection   
+            // fire the selection
             selectionProviderView.setSelection(structuredSelection);
-            while (Display.getCurrent().readAndDispatch())
-                ;
+			processUiEvents();
             assertNull("Selection should be null in properties view", propView.getShowInContext()
-                    .getSelection());            
+                    .getSelection());
         }
     }
 
@@ -337,7 +363,7 @@ public class PropertySheetAuto extends UITestCase {
      * original source view.
      */
     public void testInputIfHidden2Bug69953() throws Throwable {
-        PropertySheetPerspectiveFactory3.applyPerspective(activePage); 
+        PropertySheetPerspectiveFactory3.applyPerspective(activePage);
         PropertySheet propView = (PropertySheet) createTestParts(activePage);
         // project explorer hides property view, because it is in the same stack
         createCars();
@@ -348,29 +374,28 @@ public class PropertySheetAuto extends UITestCase {
 
             // activate now selectionProviderView (to became site selection provider again)
             activePage.activate(selectionProviderView);
-            while (Display.getCurrent().readAndDispatch())
-                ;
-            
+			processUiEvents();
+
             // create the selection
             int numberToSelect = random.nextInt(NUMBER_OF_CARS - 2);
             ArrayList selection = new ArrayList(numberToSelect);
             while (selection.size() < numberToSelect) {
                 int j = random.nextInt(NUMBER_OF_CARS);
-                if (!selection.contains(cars[j]))
-                    selection.add(cars[j]);
+                if (!selection.contains(cars[j])) {
+					selection.add(cars[j]);
+				}
             }
             StructuredSelection structuredSelection = new StructuredSelection(
                     selection);
             // fire the selection
             selectionProviderView.setSelection(structuredSelection);
-            while (Display.getCurrent().readAndDispatch())
-                ;
-            
-            // props view hidden, but still tracks the selection from original source part            
+			processUiEvents();
+
+            // props view hidden, but still tracks the selection from original source part
             assertEquals(structuredSelection, propView.getShowInContext().getSelection());
-            
+
             // unhide props view again
-            activePage.showView(IPageLayout.ID_PROP_SHEET);            
+            activePage.showView(IPageLayout.ID_PROP_SHEET);
             assertViewsVisibility2(propView, projectExplorer);
 
             // props view visible again and shows the last selection from original source part
@@ -378,33 +403,109 @@ public class PropertySheetAuto extends UITestCase {
         }
     }
 
+	/**
+	 * Supply selection events with a random car selection before properties
+	 * view is hidden by the another view in the same stack which can also
+	 * provide selection. Switch to the another view in the same stack - now the
+	 * selection from this view should NOT go to the properties view, because
+	 * only one of those views can be shown at same time. After properties view
+	 * became visible again, it should show car selection from the (still
+	 * visible) original source view.
+	 */
+	public void testInputIfHiddenAndSelectionNotChangesBug485154() throws Throwable {
+		PropertySheetPerspectiveFactory3.applyPerspective(activePage);
+		PropertySheet propView = (PropertySheet) createTestParts(activePage);
+		processUiEvents();
+
+		// bring project explorer view to front (hides property view from same
+		// stack)
+		IViewPart projectExplorer = activePage.showView(IPageLayout.ID_PROJECT_EXPLORER);
+		processUiEvents();
+
+		// bring properties view to front (hides project explorer view from same
+		// stack)
+		activePage.showView(IPageLayout.ID_PROP_SHEET);
+		processUiEvents();
+
+		assertViewsVisibility2(propView, projectExplorer);
+		assertEquals(new StructuredSelection(), propView.getShowInContext().getSelection());
+
+		// make sure selection view is active
+		activePage.activate(selectionProviderView);
+		processUiEvents();
+
+		createCars();
+
+		// create the selection
+		int numberToSelect = random.nextInt(NUMBER_OF_CARS - 2);
+		ArrayList selection = new ArrayList(numberToSelect);
+		while (selection.size() < numberToSelect) {
+			int j = random.nextInt(NUMBER_OF_CARS);
+			if (!selection.contains(cars[j])) {
+				selection.add(cars[j]);
+			}
+		}
+		StructuredSelection structuredSelection = new StructuredSelection(selection);
+		// fire the selection
+		selectionProviderView.setSelection(structuredSelection);
+		processUiEvents();
+
+		assertEquals(structuredSelection, propView.getShowInContext().getSelection());
+
+		for (int i = 0; i < 10; i++) {
+			// activate project explorer (should hide properties view)
+			activePage.activate(projectExplorer);
+			processUiEvents();
+
+			assertViewsVisibility1(propView, projectExplorer);
+
+			// props view hidden, but still tracks the selection from original
+			// source part
+			assertEquals(structuredSelection, propView.getShowInContext().getSelection());
+
+			// unhide props view again
+			activePage.showView(IPageLayout.ID_PROP_SHEET);
+			processUiEvents();
+
+			assertViewsVisibility2(propView, projectExplorer);
+
+			// props view visible again and shows the last selection from
+			// original source part
+			assertEquals(structuredSelection, propView.getShowInContext().getSelection());
+		}
+	}
+
+	private void processUiEvents() {
+		while (Display.getCurrent().readAndDispatch()) {
+			;
+		}
+	}
+
     private void assertViewsVisibility1(PropertySheet propView, IViewPart projectExplorer) {
-        while (Display.getCurrent().readAndDispatch())
-            ;
+		processUiEvents();
         assertFalse("'Property' view should be hidden", activePage.isPartVisible(propView));
         assertTrue("'Project Explorer' view should be visible", activePage
                 .isPartVisible(projectExplorer));
         assertTrue("'Selection provider' view should be visible", activePage
                 .isPartVisible(selectionProviderView));
-    }        
-    
+    }
+
     private void assertViewsVisibility2(PropertySheet propView, IViewPart projectExplorer) {
-        while (Display.getCurrent().readAndDispatch())
-            ;
+		processUiEvents();
         assertTrue("'Property' view should be visible", activePage.isPartVisible(propView));
         assertFalse("'Project Explorer' view should be hidden", activePage
                 .isPartVisible(projectExplorer));
         assertTrue("'Selection provider' view should be visible", activePage
                 .isPartVisible(selectionProviderView));
-    }        
-        
+    }
+
     /**
      * Tests that the Properties view provides the source part for getAdapter(ISaveablePart.class)
-     * if it's saveable.  
+     * if it's saveable.
      * See  Bug 125386 [PropertiesView] Properties view should delegate Save back to source part
      */
     public void testSaveableRetargeting() throws Throwable {
-        PropertySheetPerspectiveFactory.applyPerspective(activePage); 
+        PropertySheetPerspectiveFactory.applyPerspective(activePage);
     	IWorkbenchPart propView = createTestParts(activePage);
     	assertNull(propView.getAdapter(ISaveablePart.class));
     	IViewPart saveableView = activePage.showView(SaveableMockViewPart.ID);
